--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,23 @@
 /* html {
     height: 100%
 } */
-
+/* @font-face { */
+    /* font-family: 'NeuesBauenDemo'; */
+    /* src: url('../src/assets/fonts/Japanese\ Style.ttf'); */
+    /* src: url('../fonts/neues_bauen_demo-webfont.eot?#iefix') format('embedded-opentype'),
+	 url('../fonts/neues_bauen_demo-webfont.woff') format('woff'),
+	 url('../fonts/neues_bauen_demo-webfont.ttf') format('truetype'),
+	 url('../fonts/neues_bauen_demo-webfont.svg#NeuesBauenDemo') format('svg'); */
+    /* font-weight: normal; */
+    /* font-style: normal; */
+  /* } */
 body{
     /* text-align: justify; */
     /* word-break: break-all; */
     font-size: 12px;
     background: #f0eced;
     font-family: Neue Haas Unica,PingFang SC,微软雅黑,Microsoft Yahei,宋体,Helvetica,Arial,simsun;
+    /* font-family: 'NeuesBauenDemo'; */
     /* background: url(./assets/tiger_strong.png) no-repeat fixed center left -400px / 600px,
                 url(./assets/tiger_foot.png) no-repeat fixed center right -260px / 600px; */
     /* min-height: 100vh; */
