--- a/src/components/Slogan/Slogan.css
+++ b/src/components/Slogan/Slogan.css
@@ -15,7 +15,7 @@
     width: 160px;
     height: 160px;
     margin: 0 auto;
-    background: url('../../assets/images/chushi.svg') no-repeat;
+    background: url('../../assets/img/chef.png') no-repeat;
     background-size: 90%;
     background-position: center;
     /* border: solid 4px #F06C2A; */
