Deleted some useless assets.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,17 +17,17 @@
     margin: 0 15px;
     font-size: 18px;
 }
-.footer-logo1{
+/* .footer-logo1{
     background: url(../../assets/images/telegram.png);
-}
+} */
 
-.footer-logo2{
+/* .footer-logo2{
     background: url(../../assets/images/twitter.png);
-}
+} */
 
-.footer-logo3{
+/* .footer-logo3{
     background: url(../../assets/images/medium.png);
-}
+} */
 
 .footer-logo{
     background-repeat: no-repeat;
