master fixed img directory

--- a/src/components/DetailItem/DetailItem.css
+++ b/src/components/DetailItem/DetailItem.css
@@ -42,7 +42,7 @@
 .detail-item-logo-img{
     width: 100px;
     height: 100px;
-    /* background: url(../../assets/IMG/xx.svg); */
+    /* background: url(../../assets/images/xx.svg); */
     /* background: url(../../assets/tiger-logo.png);
     background-repeat: no-repeat;
     background-size: 100%;
