--- a/src/components/Slogan/Slogan.css
+++ b/src/components/Slogan/Slogan.css
@@ -15,7 +15,7 @@
     width: 240px;
     height: 187px;
     margin: 0 auto;
-    background: url('../../assets/img/chef.png') no-repeat;
+    background: url('../../assets/images/chef.png') no-repeat;
     background-size: 90%;
     background-position: center;
     /* border: solid 4px #F06C2A; */
