--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,17 +17,11 @@
     margin: 0 15px;
     font-size: 18px;
 }
-/* .footer-logo1{
-    background: url(../../assets/images/telegram.png);
-} */
 
-/* .footer-logo2{
-    background: url(../../assets/images/twitter.png);
-} */
-
-/* .footer-logo3{
-    background: url(../../assets/images/medium.png);
-} */
+.external-logo {
+  width: 50px;
+  height: 50px;
+}
 
 .footer-logo{
     background-repeat: no-repeat;
